@@ -1,4 +1,13 @@
 #############################################################################
+BETA PUBLIC RELEASE VERSION 0.2.6       ??-??-02
+#############################################################################
+  
+  * Made a few routines compliant with ANSI X3.159-1989 by 
+	removing snprintf (compliant with ISO/IEC 9899:1999).  This is basically
+    for the sake of OSF support.
+
+
+#############################################################################
 BETA PUBLIC RELEASE VERSION 0.2.5       11-21-02
 #############################################################################
 
